...
                                            <rect key="frame" x="0.0" y="0.0" width="375" height="146"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZhL-14-Kus">
                                                    <rect key="frame" x="14" y="0.0" width="347" height="146"/>
                                                    <subviews>
                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Daily Report" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="l4x-dR-NHG">
                                                            <rect key="frame" x="14" y="14" width="319" height="27"/>
                                                            <constraints>
                                                                <constraint firstAttribute="height" constant="27" id="dF2-Ww-TyK"/>
                                                            </constraints>
                                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="22"/>
                                                            <nil key="textColor"/>
...
                                                            <rect key="frame" x="29" y="90" width="288" height="42"/>
                                                            <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
                                                            <constraints>
                                                                <constraint firstAttribute="height" constant="42" id="2pA-TN-oMk"/>
                                                            </constraints>
                                                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
                                                            <state key="normal" title="Open Questionnaire"/>
                                                            <userDefinedRuntimeAttributes>
                                                                <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                                    <integer key="value" value="10"/>
                                                                </userDefinedRuntimeAttribute>
                                                            </userDefinedRuntimeAttributes>
                                                            <connections>
...
                        <connections>
                            <outlet property="dataSource" destination="IHQ-78-Oze" id="wCv-yw-F85"/>
                            <outlet property="delegate" destination="IHQ-78-Oze" id="ZYA-kT-GSf"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Daily Report" id="fkp-bD-fJa">
                        <barButtonItem key="rightBarButtonItem" title="Submit" id="cXB-Fj-6yg">
                            <connections>
                                <action selector="donePressed:" destination="IHQ-78-Oze" id="PPT-E1-OrT"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                </tableViewController>
...
